src/objects/VAT1__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>HUPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPONENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>ANDHRA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASSAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIHAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHANDIGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHATTISGARH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUJARAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HARYANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIMACHAL PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J&amp;K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JHARKHAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KARNATAKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KERALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MADHYA PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAHARASHTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORISSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUNJAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJASTHAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAMIL NADU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTTAR PRADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UTTARAKHAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST BENGAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage__c</fullName>
        <label>VAT Percentage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>VAT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>VAT_Percentage__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VAT Record  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>